# mission-control

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
public/nerd-fonts/: nerd-fonts-generated.min.css
src/: App.svelte  main.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/actions/: draggable.ts
src/components/: AddFromInput.svelte  AddFromOptions.svelte  Dropzone.svelte  Notification.svelte  PagedFontClassSelector.svelte  Pager.svelte  Program.svelte  ProgramArgument.svelte  ProgramTab.svelte  Session.svelte  SessionEditor.svelte  SessionTab.svelte
src/components/inputs/: Checkbox.svelte  Dropdown.svelte  TextAreaInput.svelte  TextInput.svelte
src/components/modals/: ConfirmationModal.svelte  FileFinderModal.svelte  IconFinderModal.svelte  Modal.svelte
src/components/sidebar/: Sidebar.svelte  SidebarContent.svelte
src/components/tabs/: Tab.svelte  Tabs.svelte
src/components/tags/: Tag.svelte  TagInput.svelte
src/constants/: font-awesome-classes.ts  nerd-font-classes.ts
src/models/: config.ts  eel-window.ts  file-system.ts  modal-types.ts
src/services/: app-dev-service.ts  application-service.ts  file-type-service.ts  notification-service.ts  program-service.ts  session-service.ts  tauri-service.ts
src/stores/: notification-store.ts  tag-store.ts
src/styles/: _styles.scss  styles.css
src/styles/base/: _global.scss
src/styles/components/: _data-container.scss  _file-finder.scss  _font-class-selector.scss  _input-container.scss  _notifications.scss  _pager.scss  _scrollbar.scss  (+2 more)
(+4 files in other folders)
